@@ -4,6 +4,7 @@
 
 -------------------------------- 0.54 -----------------------------------
 
+- Added low/high detail message.
 - Atari: more rendering optimizations, special 060 routine.
 - Fixed weapon drawing in low detail.
 - Fixed crash in audio on exit.
